# Kiro-SDLC-Agents

./: .gitignore  New-Approach.md  README.md  Requirement-Nodejs.md  Requiremnt-Java.md  Requiremnt-Python.md  TODO.md  agents_diff.txt  agents_diff_utf8.txt  backend_diff.txt  backend_diff_utf8.txt  get_tools.js  inject_all_logs.js  jira.conf  kb-standard.md  package-lock.json  package.json  test_api.py  tmp-mcp-call.json
mcp-code-intelligence-python/: README.md  copy_viewer.py  pyproject.toml  test_wave1.py
mcp-code-intelligence-python/src/mcp_code_intel/: config.py  db.py  indexer.py  ollama.py  patterns.py  scanner.py  server.py  tools.py
mcp-code-intelligence-python/src/mcp_code_intel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp-code-intelligence-python/src/mcp_code_intel/context/: __init__.py  ai_context_service.py  git_service.py  query_analyzer.py  tool_definitions.py
mcp-code-intelligence-python/src/mcp_code_intel/drawio/: __init__.py  drawio_export_png.py  drawio_layout.py  drawio_parser.py  drawio_router.py
mcp-code-intelligence-python/src/mcp_code_intel/git/: __init__.py  git_log_parser.py  git_vector_index.py  semantic_searcher.py
mcp-code-intelligence-python/src/mcp_code_intel/graph/: dependency_formatters.py  models.py  symbol_resolver.py  test_detector.py  tool_definitions.py  traverser.py
mcp-code-intelligence-python/src/mcp_code_intel/http/: __init__.py  api_routes.py  graph_analyzer.py  ingest_api.py  (+9 more)
mcp-code-intelligence-python/tests/: test_agent_scope_filter.py  test_auto_linker.py  test_incremental_parser.py  test_orchestration_e2e.py  test_port_conflict.py  test_quality_gate.py  test_similarity.py  test_working_tier_expiry.py
mcp-code-intelligence-python/tests/analyzers/: test_modules.py
(+4489 files in other folders)
