[project]
name = "mcp-code-intel"
version = "0.4.0"
description = "MCP Code Intelligence Server — Python variant with FTS5 search"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
watch = ["watchdog>=3.0"]
embedding = ["onnxruntime>=1.16.0", "numpy>=1.24.0"]

[project.scripts]
mcp-code-intel = "mcp_code_intel.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
